css/main.css
/* ... */
/* end -------------------- */
/*  Стили блока .card-price */
.card-price {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  margin-right: 20%;
}
.card-price__info .info-icon:not(:last-child) {
  margin-bottom: 10px;
}
.card-price__right {
  margin-right: 10%;
}
.card-price__right .price-last-old {
  font-size: 18px;
}
.card-price__right .price-last-new {
  font-size: 36px;
}
.card-price__right .price__link,
.card-price__right .price-last__link {
  font-size: 16px;
}
.card-price__right .price-last__text {
  font-size: 13px;
}
.info-icon {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 14px;
  color: #1d1d1b;
  line-height: 130%;
  display: flex;
  align-items: center;
}
.info-icon:before {
  font-size: 20px;
  color: #ff9138;
  display: block;
  margin-right: 5px;
}

/* end -------------------- */
/*  Стили блока .card-btns */
.card-btns {
  margin-right: 20%;
}
.card-btns .btn:not(:last-child) {
  margin-bottom: 10px;
}
.card-btns .btn-phone {
  margin-bottom: 10px;
  width: 100%;
}
.card-btns .btn_old {
  width: 100%;
}
.card-btns .icon-chat {
  background: #3ecb60;
}
.card-btns .icon-chat:hover {
  background: #2fb84f;
}
.card-btns .icon-email {
  background: #47b5e6;
}
.card-btns .icon-email:hover {
  background: #2fa0d4;
}

/* end -------------------- */
/*  Стили блока .card-buy */
.card-buy__info {
  padding: 16px;
  border-bottom: 1px solid #e7e7e7;
}
.card-buy__text {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 14px;
  color: #1d1d1b;
  line-height: 130%;
}
.card-buy__link {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 12px;
  color: #ff9138;
  line-height: 130%;
}
.card-buy__btns {
  padding: 16px 0 0 0;
  display: flex;
}
.card-buy__btns .btn:not(:last-child) {
  margin-right: 16px;
}

/* end -------------------- */
/*  Стили блока ------------- */
/* end -------------------- */
/*  Стили блока ------------- */
/* end -------------------- */
/*  Стили блока ------------- */
/* end -------------------- */
/*  Стили блока ------------- */
/* end -------------------- */
/* ================================================================================================================ */
/* СТИЛИ search СТРАНИЦЫ  ====================================================================================== */
/* ================================================================================================================ */
.list-products {
  padding: 50px 0;
}
.list-products__body {
  margin: 0 auto;
  width: 100%;
  max-width: 1150px;
}
.list-products__body .product:not(:last-child) {
  margin-bottom: 16px;
}
.list-products__pagination {
  display: flex;
  align-items: center;
  justify-content: center;
}

.product {
  width: 100%;
  padding: 20px;
  background: #ffffff;
  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  display: flex;
  align-items: start;
  justify-content: space-between;
}
.product__left {
  flex: 0 0 32%;
  min-width: 0px;
}
.product__gallery {
  position: relative;
}
.product__stiker {
  position: absolute;
  z-index: 3;
  top: 30px;
  right: -8px;
  display: flex;
  flex-direction: column;
}
.product__stiker .stiker {
  width: 100%;
}
.product__stiker .stiker:not(:last-child) {
  margin-bottom: 5px;
}
.product__center {
  flex: 1 1 auto;
  margin: 0 24px;
}
.product__title {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 28px;
  color: #1d1d1b;
  line-height: 130%;
}
.product__text {
  margin: 10px 0;
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-size: 14px;
  color: #1d1d1b;
  line-height: 130%;
}
.product__details {
  margin: 10px 0;
  padding: 10px 0;
  border-top: 1px solid #f2f2f2;
  border-bottom: 1px solid #f2f2f2;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.product__details .details-item:not(:last-child) {
  margin-right: 10px;
}
.product__desc {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 16px;
  color: #1d1d1b #fff;
  line-height: 130%;
}
.product__info {
  margin: 10px 0;
  padding: 10px 0;
  border-top: 1px solid #f2f2f2;
  display: flex;
  align-items: center;
}
.product__info .details-item:not(:last-child) {
  margin-right: 10px;
}
.product__right {
  flex: 0 0 32%;
}
.product__rating {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.product__rating .rating {
  margin-right: 10px;
}
.product__price {
  margin: 10px 0;
  display: flex;
  align-items: center;
}
.product__price .price-old {
  margin: 0 15px;
}
.product__negotiable {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 16px;
  color: #fe7653;
  line-height: 130%;
}
.product__shiping {
  margin: 10px 0;
}
.product__btns .btn-phone {
  margin-bottom: 10px;
}

.rating {
  display: inline-flex;
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 14px;
  color: #1d1d1b;
  line-height: 100%;
  align-items: center;
}
.rating:before {
  color: yellow;
  font-size: 20px;
  margin: 0 7px 0 0;
}

.coment {
  display: inline-flex;
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 14px;
  color: #1d1d1b;
  line-height: 100%;
  align-items: center;
}
.coment:before {
  color: #797979;
  font-size: 20px;
  margin: 0 7px 0 0;
}

.favorites:before {
  display: block;
  font-size: 16px;
  color: #797979;
  transition: 0.3s;
}
.favorites:hover:before {
  color: #ffae49;
}
.favorites.active:before {
  color: #ffae49;
}

.product-shiping {
  border-top: 1px solid #f2f2f2;
  border-bottom: 1px solid #f2f2f2;
  padding: 10px 0;
  display: flex;
  align-items: center;
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 14px;
  color: #1d1d1b;
  line-height: 130%;
}
.product-shiping:before {
  font-size: 20px;
  color: #fe7653;
  margin: 0 10px 0 0;
}
/* ... */

